# moxapi

./: .gitignore  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  LICENSE-MIT  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3abvz230bn897gbja4y653jx152m9fqw-source  mbqp54xdzgs333m4s4j7p5zyp5lxj1ra-source  rqgx9ci2qaz9zbzrfv3byaxfn7kj2m1i-source
.github/workflows/: cachix.yaml  deploy.yaml  docker.yaml
client/: biome.json  package-lock.json  package.json  separator.tsx
client/.next/: prerender-manifest.json  trace
client/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
client/.next/server/: server-reference-manifest.js  server-reference-manifest.json
client/.next/server/app/: page.js  page_client-reference-manifest.js
client/.next/server/chunks/: [root-of-the-server]__80bb4c51._.js.map  b2ea0_next_91633a4c._.js  b2ea0_next_91633a4c._.js.map  node_modules_next_11760126._.js.map
client/.next/static/chunks/: 32ed3_react-dom_921dfbd0._.js  [next]_entry_page-loader_ts_0ec4d2f7._.js  [next]_entry_page-loader_ts_e00a2895._.js  [root-of-the-server]__8ebb6d4b._.css.map  [root-of-the-server]__9a168d68._.css  [root-of-the-server]__9a168d68._.css.map  _36317810._.js  (+64 more)
client/src/app/: layout.tsx  page.tsx
client/src/components/: theme-provider.tsx
dashboard/: Cargo.toml  LICENSE-AGPL  LICENSE-COMMERCIAL  PWA_SETUP.md  README.md  tailwind.config.js
dashboard/src/: add_host_form.html  config.rs  main.rs
dashboard/static/: index.html  manifest.json  offline.html  output.css  sw.js
dashboard/templates/: add_host_form.html  dashboard.html  host.html  host_panel.html  login.html  main_dashboard.html
nix/: dashboard.nix  home-manager.nix  node.nix  server.nix
node/: Cargo.toml
node/src/: main.rs
server/: Cargo.toml
server/contrib/systemd/: moxidle.service.in
server/src/: main.rs
server/src/idle/: mod.rs
server/src/notify/: mod.rs
src/: main.rs
src/idle/: mod.rs
(+74 files in other folders)
