[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
askama = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
awc = "3"
dirs = "5"
serde_json = "1.0.141"
actix-session = { version = "0.7", features = ["cookie-session"] }
tokio = { version = "1.46.1", features = ["full"] }
chrono = "0.4.41"
chrono-humanize = "0.2.3"
futures = { version = "0.3.31", features = ["std"] }
