[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.8.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = { version = "0.11.5", default-features = false }
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
zbus = { version = "5.3.1", features = ["async-io"], default-features = false }
config = "0.13"
actix-ws = "0.3.0"
tokio-tungstenite = "0.27.0"
url = "2.5.4"
