[package]
name = "moxapi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.8.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
env_logger = { version = "0.11.5", default-features = false }
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
zbus = { version = "5.3.1", features = ["async-io"], default-features = false }
